src/styles/style.scss
/* ... */
#single-site {
  padding: 1rem;
  h1 {
    text-align: center;
    font-family: var(--wilderness-font);
    font-size: 2.5rem;
    margin-bottom: 0.4rem;
  }
  .site-review-header {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    p {
      font-size: 0.9rem;
    }
    .display-rating {
      padding: 0.3rem 0;
    }
    .widget-ratings {
      max-width: 70%;
      display: flex;
      height: min-content;
      .widget-container {
        padding: 0 !important;
        width: min-content;
        height: min-content;
        transform: scale(0.7);
        svg {
          width: 40px !important;
          height: 40px !important;
        }
      }
    }
    .no-reviews {
      display: flex;
      align-items: center;
      margin: 0.3rem 0 0.2rem;
      p {
        margin-left: 0.5rem;
      }
    }
  }
  .carousel-container {
    width: 100%;
    margin: 1rem 0;
  }
  .wish-list-visited-container {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin: 1.5rem 0 1.5rem;
    svg {
      transform: scale(1.3) translateX(-5px);
    }
    svg:first-of-type {
      margin-right: 1rem;
    }
  }
  .campground-attributes,
  address#contact {
    margin-bottom: 1rem;
    padding: 0.3rem;
    text-align: center;
    h2 {
      margin-bottom: 0.5rem;
    }
    p {
      display: inline-block;
      margin-left: 0.6rem;
    }
  }
  button {
    @include global-button();
    margin: 2rem 0 1rem;
  }
  p.post-review-button-note {
    font-size: 0.8rem;
  }
  .reviews,
  .accordion-container {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

#settings {
  padding-top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  select.dropdown {
    padding: 0.5rem;
    margin: 0.5rem 0 2rem;
    background: none;
    border: 2px solid black;
    border-radius: 4px;
  }

  p {
    font-size: 1.2rem;
  }
  label {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 80%;
    font-size: 1.4rem;
    font-family: var(--body-font);
    margin: 1.5rem auto 3rem;
    input {
      width: 110px;
      height: 30px;
      -webkit-appearance: none;
      appearance: none;
      border-radius: 18px;
      border: 2px solid rgb(44, 44, 44);
      position: relative;
      // margin-left: 30px;
      order: 2;
      &::before {
        content: "";
        position: absolute;
        top: -12px;
        left: -20px;
        height: 40px;
        width: 40px;
        border: 4px solid black;
        transform: scale(1.3);
        background-color: var(--color-inky-blue);
        border-radius: 50%;
        transition: 0.5s ease;
      }
      &:checked::before {
        left: 80px;
      }
      &:checked + span.first-label-span {
        color: rgb(179, 179, 179);
      }
      &:checked ~ span.second-label-span {
        color: black;
      }
    }
    span.first-label-span {
      order: 1;
    }
    span.second-label-span {
      color: rgb(179, 179, 179);
      order: 3;
    }
  }
  button {
    @include global-button();
    margin: 1rem 0 2rem;
  }
}

#review-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding: 2rem 0.2rem 1rem;
  border-bottom: 1px solid black;

  .review-header {
    display: flex;
    width: 100%;
    .review-avatar {
      height: 100%;
      width: 25vw;
      display: flex;
      align-items: center;

      img {
        border-radius: 50%;
        width: 100%;
      }
    }
    .review-meta-info {
      flex: 1;
      margin: 0 1rem;
      a {
        h3 {
          text-decoration: underline;
          color: var(--color-forest-green);
        }
      }
      p {
        font-size: 0.9rem;
        line-height: 1.2;
      }
      p.reviewer {
        font-size: 1.1rem;
        margin-bottom: 0.1rem;
        font-weight: 500;
      }
      div.display-rating {
        margin-top: 0.6rem;
        transform: scale(1.1) translateX(4%);
      }
    }
  }
  .review-content {
    padding-top: 1.3rem;
    width: 100%;
    h4 {
      margin: 0 0 0.5rem;
      text-transform: capitalize;
      text-decoration: underline;
      font-size: 1rem;
      font-weight: 500;
    }
    .comments {
      h5 {
        font-size: 1.4rem;
        font-family: var(--wilderness-font);
        // text-decoration: underline;
        margin: 1.5rem 0 0.5rem;
      }
      p {
        font-size: 0.9rem;
      }
      p.comment-meta-info {
        font-weight: 500;
      }
      h6 {
        font-size: 0.9rem;
        margin: 1.2rem 0;
      }
    }
  }
}

#post-review {
  h1 {
    font-family: var(--wilderness-font);
    font-size: 3.8rem;
    text-align: center;
    margin: 2rem 0;
  }
  form {
    display: flex;
    flex-direction: column;
    align-items: center;
    label {
      margin-bottom: 0.6rem;
    }
    input,
    div.widget-ratings,
    textarea {
      margin-bottom: 1.6rem;
    }
    input,
    textarea {
      padding: 0.5rem;
    }
    button {
      @include global-button();
    }
  }
}

#post-comment {
  h1 {
    font-family: var(--wilderness-font);
    font-size: 3.7rem;
    text-align: center;
    margin: 2rem 0;
  }
  form {
    display: flex;
    flex-direction: column;
    align-items: center;
    label {
      margin-bottom: 1rem;
    }
    textarea {
      padding: 0.5rem;
      margin-bottom: 2rem;
    }
    button {
      @include global-button();
      margin: 1rem;
    }
  }
}
/* ... */

